--- a/javascprit/1-dars/idex.html
+++ b/javascprit/1-dars/idex.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>salom github tomonidan ozgartirildi</h1>
+    <h1>salom men vs codedan o'zgartirdim</h1>
+    <h1>nimaga omayapsan github</h1>
  
   <script>
     
